# streamlit-embeded

./: README.md  setup.cfg
streamlit_embeded/: __init__.py  version.py
streamlit_embeded/frontend/: package-lock.json  package.json
streamlit_embeded/frontend/public/: index.html
streamlit_embeded/frontend/src/: Embeded.tsx  index.tsx
