[metadata]
name = streamlit_embeded
version = attr: streamlit_embeded.__version__
description = Common embeded for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/mapix/streamlit-embeded
url = https://github.com/mapix/streamlit-embeded
author = mapix
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    streamlit >= 0.63
